[gd_scene load_steps=10 format=2]

[ext_resource path="res://Character.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Bow.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.09485, 8.06731 )

[sub_resource type="Animation" id=2]
resource_name = "dead"
length = 9.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 8.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 4 ]
}

[sub_resource type="Animation" id=4]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.278431, 0.176471, 0.235294, 0.796078 )

[sub_resource type="ShaderMaterial" id=6]

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.31224
scale = Vector2( 0.791151, 0.791151 )
texture = ExtResource( 1 )
hframes = 6

[node name="CanvasLayer" type="CanvasLayer" parent="Sprite"]

[node name="debug" type="Label" parent="Sprite/CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bow" type="Sprite" parent="Sprite"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 20, 20 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
offset_h = 1.0
offset_v = 1.0

[node name="RestartPanel" type="Panel" parent="."]
margin_right = 200.0
margin_bottom = 55.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartMessage" type="Label" parent="RestartPanel"]
material = SubResource( 6 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0551
margin_top = -24.5812
margin_right = 84.9449
margin_bottom = 23.4188
text = "On a long enough timeline
Death takes us all
R to show death what's what"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WelcomePanel" type="Panel" parent="."]
margin_left = -250.0
margin_right = -50.0
margin_bottom = 55.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WelcomeMessage" type="Label" parent="WelcomePanel"]
material = SubResource( 6 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0551
margin_top = -24.5812
margin_right = 84.9449
margin_bottom = 23.4188
text = "Terrible machines have taken
over the forest.  The only hope
left is to reach the blue flame."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinPanel" type="Panel" parent="."]
margin_right = 200.0
margin_bottom = 55.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinMessage" type="Label" parent="WinPanel"]
material = SubResource( 6 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0551
margin_top = -24.5812
margin_right = 84.9449
margin_bottom = 23.4188
text = "You won,  nature is saved!
R to play again
Esc to exit"
__meta__ = {
"_edit_use_anchors_": false
}
